--- a/package.json
+++ b/package.json
@@ -9,21 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@sentry/nextjs": "^9.33.0",
+    "@types/nodemailer": "^6.4.17",
     "clsx": "^2.1.1",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.19.1",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.59.0",
     "react-icons": "^5.5.0",
     "react-lottie": "^1.2.10",
     "tailwind-merge": "^3.3.1",
     "three": "^0.177.0",
-    "three-globe": "^2.42.11"
+    "three-globe": "^2.42.11",
+    "zod": "^3.25.71"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
