--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "noImplicitAny": false,
+    // "noImplicitAny": false,
     "strict": false,
     "noEmit": true,
     "esModuleInterop": true,
